data/derived/comb/progs/unify/prog6067.ml.out
Characters 172-185:
  if (sum + r) > 9 then ( int_of_float ((sum+r) /10),((sum+r) mod 10)::v) 
                                       ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
